--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_localizations:
     sdk: flutter
+  font_awesome_flutter: ^10.8.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
