Changed : filenames, add more services, refractor some class, add custom flutter_map widget

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .packages
 pubspec.lock
 build/
+templates/
 
 # Android related
 /android/.gradle/
@@ -44,6 +45,8 @@ build/
 # Files for deployment
 *.apk
 *.ipa
+*.g.dart
+
 
 # .env file for sensitive data
 .env
