--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,18 @@ dependencies:
   flutter_map: ^7.0.2
   permission_handler: ^11.3.1
   flutter_map_location_marker: ^9.1.1
+  shimmer: ^3.0.0
+  flutter_map_compass: ^1.1.0
+  json_annotation: ^4.9.0
+  go_router: ^14.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.9.0
 
 flutter:
   uses-material-design: true
